# hogscholar

./: README.md  google-scholar-format.txt  haskell-libraries.txt  hogscholar.cabal  todo.txt
src/: Crawler.hs  Main.hs  Papers.hs  PrettyPrinter.hs  response
