name: hogscholar
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Google Scholar crawler
description: FIXME
data-dir: ""
 
executable hogscholar
    build-depends: HTTP -any, QuickCheck -any, base -any,
                   bytestring -any, cgi -any, containers -any, fgl -any,
                   html-conduit -any, network -any, split -any, text -any,
                   transformers -any, xml-conduit -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Papers Crawler PrettyPrinter
 
test-suite test-hogscholar
    build-depends: HTTP -any, QuickCheck -any, base -any,
                   bytestring -any, cgi -any, containers -any, fgl -any,
                   html-conduit -any, network -any, split -any, text -any,
                   transformers -any, xml-conduit -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src